--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,32 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
-version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
+version: 2
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-    docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+  build:
+    machine:
+      docker:
+        - image: alpine:3.4
+          environment:
+            DATABASE_URL: postgres://127.0.0.1:5432
+            RAILS_ENV: test
+        - image: circleci/postgres:9.6.2-alpine
+          environment:
+            POSTGRES_USER: root
+            POSTGRES_DB: circle-test_test
     steps:
       - checkout
+      - run: mkdir -p /tmp/artifacts
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
-
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
-workflows:
-  say-hello-workflow:
-    jobs:
-      - say-hello
+          name: build_image
+          command: make build
+      - run:
+          name: run specs
+          command: |
+            make specs
+      - run:
+          name: rubocop
+          command: |
+            make rubocop
+      - run:
+          name: brakeman
+          command: |
+            make brakeman
