Add redis image to circle ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
           environment:
             POSTGRES_USER: root
             POSTGRES_DB: circle-test_test
+        - image: redis
     steps:
       - checkout
       - run: mkdir -p /tmp/artifacts
